{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerInputMap",
            "id": "aef9f129-5dc7-4275-9e10-fbe9583f6c17",
            "actions": [
                {
                    "name": "CameraHorizontalMovement",
                    "type": "Value",
                    "id": "caa38009-ae7f-4778-9112-81439988117e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraVerticalMovement",
                    "type": "Value",
                    "id": "9d7037ab-0cc1-4336-a4dc-e2305c5fc5eb",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CharacterHorizontalMovement",
                    "type": "Value",
                    "id": "68c10371-129e-47ad-906d-4223bc3385d0",
                    "expectedControlType": "Double",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CharacterVerticalMovement",
                    "type": "Button",
                    "id": "ab413c33-aaee-4401-ad11-28e833463510",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e39a13eb-2f39-42f0-a5ad-003166ba1fe9",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraHorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2a71821-abe2-4e29-8486-cbb306432dc8",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraVerticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "e8494584-bab4-4964-a76a-11a75d27cef9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterHorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "cf17caf9-9b68-46de-abdd-cf7aa061f79c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterHorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "1647536c-3877-41ac-9967-fe0336d19d34",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterHorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "953571fd-da73-439b-a4d7-963716f14b1f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterVerticalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "345aad26-a0d4-40a6-9c80-9fb29a0402f7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterVerticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "23fb0d0c-d77d-43c0-8f2a-263c49e328f0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterVerticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}